# rust-lather

./: Cargo.toml  LICENSE.txt  README.md  TODO  build.rs  build_wheel.sh  example.py  lather-vis  lather_comparison.py  release.sh  rustfmt.toml  setup.py  sun.cfg  sun_ccfs.rs
.github/workflows/: build.yml  main.yml  pypi.yml
examples/: config.cfg  example.py  longterm.py  random.toml  simple_rv.rs  soap.toml  soap_comparison.py  soap_rv.txt  sun.toml  trappist.toml
lather/: __init__.py  lather-vis  lather-vis.py
rather/: __init__.py
resources/: CCF_solar_spectrum_G2_FTS_reso_not_evenly_sampled_in_freq.rdb  CCF_solar_spectrum_G2_FTS_reso_not_evenly_sampled_in_freq_extra_large_low_resolution.rdb
rust/: Cargo.toml  build.rs  lather.h  sun.cfg
rust/benches/: bench_rv.rs
rust/src/: boundingshape.rs  bounds.rs  compute_bisector.rs  distributions.rs  fit_rv.rs  lib.rs  linspace.rs  point.rs  profile.rs  resolution.rs  simulation.rs  solar_ccfs.rs  spot.rs  star.rs
src/: bench.rs  boundingshape.rs  bounds.rs  compute_bisector.rs  distributions.rs  fit_rv.rs  float_range.rs  lib.rs  linspace.rs  main.rs  planck.rs  point.rs  poly_fit_rv.rs  profile.rs  resolution.rs  simulation.rs  solar_ccfs.rs  spot.rs  star.rs  sun_ccfs.rs
