[package]
name = "lather"
version = "0.0.0"
authors = ["Benjamin Kimock <kimockb@gmail.com>"]
license = "MIT/Apache-2.0"

description = "A Rust crate and Python extension for modeling starspot effects on radial velocity and photometric observations, inspired by complaints about the SOAP project of similar goals."
repository = "https://github.com/saethlin/rust-lather"
documentation = "https://docs.rs/lather/"

keywords = ["astronomy"]
categories = ["science", "simulation"]

[dependencies]
rand = "0.4"
rust-ini = "0.10"
itertools = "0.7"
quadrature = "0.1"
rulinalg = "0.4"
numpy = "0.2"
ndarray = "0.9" # Held back by numpy
bencher = "0.1"
png = "0.11"
rustfft = "2.0"
num-complex = "0.1"
gnuplot = "0.0"
rayon = "1.0"
derivative = "1.0"

[dependencies.GSL]
version = "0.4"
features = ["v2"]

[dependencies.cpython]
version = "0.1" # Held back by numpy
features = ["extension-module"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
