[package]
name = "lather"
version = "0.1.1"
authors = ["Benjamin Kimock <kimockb@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/saethlin/rust-lather"
description = "A Rust crate and Python extension for modeling starspot effects on radial velocity and photometric observations, inspired by complaints about the SOAP project of similar goals."
build = "build.rs"

keywords = ["astronomy"]
categories = ["science", "simulation"]

[features]
experimental = []

[dependencies]
rand = "0.7"
rand_distr = "0.2"
quadrature = "0.1"
rayon = "1.0"
serde = {version = "1.0", features = ["derive"]}
toml = "0.5"

[lib]
crate-type = ["cdylib"]
