[package]
name = "lather"
version = "0.0.0"
authors = ["Benjamin Kimock <kimockb@gmail.com>"]
license = "MIT/Apache-2.0"
build = "build.rs"

description = "A Rust crate and Python extension for modeling starspot effects on radial velocity and photometric observations, inspired by complaints about the SOAP project of similar goals."
repository = "https://github.com/saethlin/rust-lather"
documentation = "https://docs.rs/lather/"

keywords = ["astronomy"]
categories = ["science", "simulation"]

[features]
simd = ["faster"]

[dependencies]
rand = "0.5"
itertools = "0.7"
quadrature = "0.1"
rulinalg = "0.4"
png = "0.12"
rustfft = "2.1"
gnuplot = "0.0"
rayon = "1.0"
derivative = "1.0"
faster = {version="0.5", optional=true}
#faster = {git="https://github.com/AdamNiederer/faster", optional=true}
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
GSL = {version = "1.0", features=["v2"]}

[dev-dependencies]
criterion = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cbindgen = "0.6.2"

[[bench]]
name = "bench_rv"
harness = false

