[package]
name = "lather"
version = "0.0.0"
authors = ["Benjamin Kimock <kimockb@gmail.com>"]
license = "MIT/Apache-2.0"
build = "build.rs"

description = "A Rust crate and Python extension for modeling starspot effects on radial velocity and photometric observations, inspired by complaints about the SOAP project of similar goals."
repository = "https://github.com/saethlin/rust-lather"
documentation = "https://docs.rs/lather/"

keywords = ["astronomy"]
categories = ["science", "simulation"]

[features]
# SIMD stuff commented-out until Rust 2018 ships
simd = ["faster"]
experimental = []

[dependencies]
rand = "0.6"
quadrature = "0.1"
rulinalg = "0.4"
png = "0.13"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
faster = {git="https://github.com/AdamNiederer/faster", optional=true}
structopt = {version = "0.2", default-features = false}

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = {version = "0.2", default-features = false}

[[bench]]
name = "bench_rv"
harness = false
